<resources>
    <string name="app_name">MT</string>
    <string name="connect_back">返回</string>
    <string name="connect_demo_version">MT\nV1.1.5</string>
    <string name="connect_wyze_scale">连接性测试</string>
    <string name="connect_wyze_long_connect">蓝牙长连接性测试</string>
    <string name="connect_phone_style_num">手机型号</string>
    <string name="connect_phone_test_result">测试结果</string>
    <string name="connect_phone_test_testing">测试进行中</string>
    <string name="connect_phone_testing">正在进行测试</string>
    <string name="connect_phone_start_test_scan">开始测试(扫连)</string>
    <string name="connect_phone_start_test_start">开始测试(直连)</string>
    <string name="connect_stop_test">停止测试</string>
    <string name="connect_test_space">测试时间间隔（单位:秒）</string>
    <string name="connect_test_count">测试次数</string>
    <string name="connect_test_timer">测试时长(单位:时）</string>
    <string name="connect_test_line">测试距离（单位:米）</string>
    <string name="connect_select_device">选择设备</string>
    <string name="connect_phone_style_system">手机系统</string>
    <string name="connect_phone_fail_records">设备日志</string>
    <string name="connect_wrong_fail_records">错误日志</string>
    <string name="connect_phone_test_time">测试时间</string>
    <string name="connect_phone_test_model">机型</string>
    <string name="connect_phone_test_mac">mac</string>
    <string name="connect_phone_test_distance">距离</string>
    <string name="connect_phone_test_all_count">测试总次数</string>
    <string name="connect_phone_test_all_timer">测试总时长</string>
    <string name="connect_phone_test_space">间隔</string>
    <string name="connect_phone_test_current_count">当前测试次数</string>
    <string name="connect_phone_test_current_timer">当前测试时长</string>
    <string name="connect_phone_test_scan_min_time">扫描最短时间</string>
    <string name="connect_phone_test_scan_max_time">扫描最长时间</string>
    <string name="connect_phone_test_scan_average_time">扫描平均时间</string>
    <string name="connect_phone_test_scan_success_count">扫描成功次数</string>
    <string name="connect_phone_test_scan_fail_count">扫描失败次数</string>
    <string name="connect_phone_test_scan_success_rate">扫描成功率</string>
    <string name="connect_phone_test_connect_min_time">连接最短时间</string>
    <string name="connect_phone_test_connect_max_time">连接最长时间</string>
    <string name="connect_phone_test_connect_average_time">连接平均时间</string>
    <string name="connect_phone_test_connect_success_count">连接成功次数</string>
    <string name="connect_phone_test_connect_disconnect_count">连接断开次数</string>
    <string name="connect_phone_test_connect_fail_count">连接失败次数</string>
    <string name="connect_phone_test_connect_success_rate">连接成功率</string>
    <string name="connect_phone_test_confirm_min_time">认证最短时间</string>
    <string name="connect_phone_test_confirm_max_time">认证最短时间</string>
    <string name="connect_phone_test_confirm_average_time">认证平均时间</string>
    <string name="connect_phone_test_confirm_success_count">认证成功次数</string>
    <string name="connect_phone_test_confirm_fail_count">认证失败次数</string>
    <string name="connect_phone_test_confirm_success_rate">认证成功率</string>
    <string name="connect_phone_test_discover">扫描</string>
    <string name="connect_select_device_begin_scan">开始扫描……</string>
    <string name="connect_warning_select_device">请选择设备</string>
    <string name="connect_warning_input_number_style">请输入数字</string>
    <string name="connect_warning_play_count">测试次数必须大于0</string>
    <string name="connect_warning_unbind_fail">解绑失败，无法继续，停止循环</string>
    <string name="connect_scaning_connecting">正在扫连中</string>

    <string name="main_menu">功能选项</string>
    <string name="main_menu_bluetooth_connect">蓝牙连接测试</string>
    <string name="main_menu_bluetooth_no_confirm_connect">蓝牙连接测试(不带认证)</string>
    <string name="main_menu_notification_auto_test">推送测试(自动)</string>
    <string name="main_menu_notification_manual_test">推送测试(手动)</string>
    <string name="main_menu_sync_data_bluetooth_auto">蓝牙绑定同步数据测试(自动）</string>
    <string name="main_menu_sync_data_bluetooth_manual">蓝牙绑定同步数据测试(手动）</string>
    <string name="main_menu_write_product_log">写固件端的日志</string>
    <string name="notification_auto_title">推送通知测试(自动)</string>
    <string name="notification_manual_title">推送通知测试(手动)</string>
    <string name="sync_data_auto_title">蓝牙绑定数据同步测试(自动)</string>
    <string name="sync_data_manual_title">蓝牙绑定数据同步测试(手动)</string>
    <string name="update_ota_title">升级测试</string>
    <string name="send_notification">发送通知</string>
    <string name="send_message">发送短信</string>
    <string name="send_phone_call_hung_up">模拟来电和挂断</string>
    <string name="send_phone_call_answer_hung_up">模拟来电,接听,挂断</string>
    <string name="send_phone_call_number">测试手机号码</string>
    <string name="bind_watch_with_phone">开始绑定设备</string>
    <string name="unbind_watch_with_phone">开始解绑设备</string>
    <string name="bind_unbind_result">绑定或解绑结果</string>
    <string name="send_phone_call">来电</string>
    <string name="send_phone_hung_up">挂断</string>
    <string name="send_phone_answer">接听</string>
    <string name="select_upgrade_version">选择固件升级版本</string>
    <string name="select_downgrade_version">选择固件降级版本</string>
    <string name="start_update">开始升级</string>
    <string name="manual_start_test">开始本次测试</string>
    <string name="manual_end_test">结束本次测试</string>
    <string name="send_notification_all_count">发送通知总次数</string>
    <string name="send_notification_current_count">发送通知当前次数</string>
    <string name="send_notification_success_count">发送通知成功次数</string>
    <string name="send_notification_fail_count">发送通知失败次数</string>
    <string name="send_notification_success_rate">发送通知成功率</string>
    <string name="send_message_all_count">发送短信总次数</string>
    <string name="send_message_current_count">发送短信当前次数</string>
    <string name="send_message_success_count">发送短信成功次数</string>
    <string name="send_message_fail_count">发送短信失败次数</string>
    <string name="send_message_success_rate">发送短信成功率</string>
    <string name="send_phone_call_all_count">发送来电总次数</string>
    <string name="send_phone_call_current_count">发送来电当前次数</string>
    <string name="send_phone_call_success_count">发送来电成功次数</string>
    <string name="send_phone_call_fail_count">发送来电失败次数</string>
    <string name="send_phone_call_success_rate">发送来电成功率</string>
    <string name="send_phone_answer_all_count">发送接听总次数</string>
    <string name="send_phone_answer_current_count">发送接听当前次数</string>
    <string name="send_phone_answer_success_count">发送接听成功次数</string>
    <string name="send_phone_answer_fail_count">发送接听失败次数</string>
    <string name="send_phone_answer_success_rate">发送接听成功率</string>
    <string name="send_phone_hung_up_all_count">发送挂断总次数</string>
    <string name="send_phone_hung_up_current_count">发送挂断当前次数</string>
    <string name="send_phone_hung_up_success_count">发送挂断成功次数</string>
    <string name="send_phone_hung_up_fail_count">发送挂断失败次数</string>
    <string name="send_phone_hung_up_success_rate">发送挂断成功率</string>
    <string name="send_phone_call_hung_up_all_count">发送来电,挂断总次数</string>
    <string name="send_phone_call_hung_up_current_count">发送来电,挂断当前次数</string>
    <string name="send_phone_call_hung_up_success_count">发送来电挂,断成功次数</string>
    <string name="send_phone_call_hung_up_fail_count">发送来电,挂断失败次数</string>
    <string name="send_phone_call_hung_up_success_rate">发送来电,挂断成功率</string>
    <string name="send_phone_call_answer_hung_up_all_count">发送来电,接听,挂断总次数</string>
    <string name="send_phone_call_answer_hung_up_current_count">发送来电,接听,挂断当前次数</string>
    <string name="send_phone_call_answer_hung_up_success_count">发送来电,接听,挂断成功次数</string>
    <string name="send_phone_call_answer_hung_up_fail_count">发送来电,接听,挂断失败次数</string>
    <string name="send_phone_call_answer_hung_up_success_rate">发送来电,接听,挂断成功率</string>
    <string name="send_notification_type_selector">第三方推送通知选择</string>
    <string name="update_result">升级结果</string>
    <string name="downgrade_result">降级级结果</string>
    <string name="update_success_count">升级成功次数</string>
    <string name="update_failure_count">升级失败次数</string>
    <string name="update_success_rate">升级成功率</string>
    <string name="update_max_time">升级最长用时</string>
    <string name="update_min_time">升级最短用时</string>
    <string name="update_average_time">升级平均用时</string>
    <string name="downgrade_success_count">降级成功次数</string>
    <string name="downgrade_failure_count">降级失败次数</string>
    <string name="downgrade_success_rate">降级成功率</string>
    <string name="downgrade_max_time">降级最长用时</string>
    <string name="downgrade_min_time">降级最短用时</string>
    <string name="downgrade_average_time">降级平均用时</string>
    <string name="user_height">身高</string>
    <string name="user_weight">体重</string>
    <string name="start_sync_data">开始同步数据(包含时间和时区，健康数据(若设备有)，运动记录(若设备有)）</string>
    <string name="start_sync_to_watch">下发数据到设备(身高，体重)</string>
    <string name="start_sync_time">同步时间和时区</string>
    <string name="start_sync_data_health">同步健康数据和运动数据</string>
    <string name="sync_dataing">同步数据中……</string>
    <string name="sync_result">同步结果</string>
    <string name="sync_phone_to_watch_success_count">下发到设备成功次数</string>
    <string name="sync_phone_to_watch_fail_count">下发到设备失败次数</string>
    <string name="sync_phone_to_watch_success_rate">下发到设备成功率</string>
    <string name="sync_phone_to_sync_time_success">同步时间和时区成功次数</string>
    <string name="sync_phone_to_sync_time_fail">同步时间和时区失败次数</string>
    <string name="sync_phone_to_sync_time_success_rate">同步时间和时区成功率</string>
    <string name="sync_phone_to_sync_health_data_success">同步健康数据和运动数据成功次数</string>
    <string name="sync_phone_to_sync_health_data_fail">同步健康数据和运动数据失败次数</string>
    <string name="sync_phone_to_sync_health_data_success_rate">同步健康数据和运动数据成功率</string>
    <string name="send_auto_success">发送成功次数</string>
    <string name="send_auto_fail">发送失败次数</string>
    <string name="send_auto_success_rate">发送成功率</string>
    <string name="send_auto_sending">有发送任务进行中……</string>
    <string name="blue_tooth_long_connect">蓝牙长连接</string>
    <string name="menu_title_update_into">升级测试</string>
</resources>