<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_back_title"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_notification_auto_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/connect_back"
        android:textColor="@color/color_text"
        android:textSize="15sp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linear_child_id"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/notification_auto_title"
                android:background="#9FA2A4"
                android:id="@+id/title_notification_test"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--手机型号-->
            <include
                layout="@layout/activity_right_text_phone_style"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--手机系统-->
            <include
                layout="@layout/activity_right_text_phone_system"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--选择设备（mac）-->
            <include
                layout="@layout/activity_right_text_select_device"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--测试距离（单位：米）-->
            <include
                layout="@layout/activity_right_edit_phone_distance"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--测试次数-->
            <include
                layout="@layout/activity_right_edit_phone_test_count"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--测试间隔（单位：秒）-->
            <include
                layout="@layout/activity_right_edit_phone_space"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--绑定设备-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/bind_watch_with_phone"
                android:background="@color/color_back_title"
                android:id="@+id/title_bind_start"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--解绑设备-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/unbind_watch_with_phone"
                android:background="@color/color_back_title"
                android:id="@+id/title_unbind_start"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--绑定结果-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/test_bind_unbind_result"
                android:background="@color/color_wyze_scale_bg"
                android:text="@string/bind_unbind_result"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/color_text"
                />
            <!--推送类型-->
            <TextView
                android:id="@+id/test_notification_selected"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/color_back_title"
                android:gravity="center"
                android:text="@string/send_notification_type_selector"
                android:textColor="@color/color_text"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--测试手机号码-->
            <include
                layout="@layout/activity_right_edit_phone_number"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--发送其他通知-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/send_notification"
                android:background="@color/color_back_title"
                android:id="@+id/title_send_notification"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--发送短信-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/send_message"
                android:background="@color/color_back_title"
                android:id="@+id/title_send_message"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--模拟自动来电，自动挂断-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/send_phone_call_hung_up"
                android:background="@color/color_back_title"
                android:id="@+id/title_send_phone_call_hung_up"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--模拟自动来电，接听,自动挂断-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/send_phone_call_answer_hung_up"
                android:background="@color/color_back_title"
                android:id="@+id/title_send_phone_call_answer_hung_up"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--停止测试-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/connect_stop_test"
                android:background="@color/color_back_title"
                android:id="@+id/title_send_stop"
                android:textColor="@color/color_text"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/test_result"
                android:background="@color/color_wyze_scale_bg"
                android:text="@string/connect_phone_test_result"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/color_text"
                />
            <!--测试时间-->
            <include
                layout="@layout/activity_right_text_test_time"
                />
            <!--测试机型-->
            <include
                layout="@layout/activity_right_text_test_model"
                />
            <!--mac-->
            <include
                layout="@layout/activity_right_text_test_mac"
                />
            <!--距离-->
            <include
                layout="@layout/activity_right_text_test_distance"
                />
            <!--测试总次数-->
            <include
                layout="@layout/activity_right_text_test_all_count"
                />
            <!--间隔-->
            <include
                layout="@layout/activity_right_text_test_space"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--当前测试次数-->
            <include
                layout="@layout/activity_right_text_test_current_count"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider_bg"/>
            <!--发送成功次数-->
            <include
                layout="@layout/activity_right_text_send_auto_success"
                />
            <!--发送失败次数-->
            <include
                layout="@layout/activity_right_text_send_auto_fail"
                />
            <!--发送成功率-->
            <include
                layout="@layout/activity_right_text_send_auto_success_rate"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/test_fail_log_records"
                android:background="@color/color_wyze_scale_bg"
                android:text="@string/connect_wrong_fail_records"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_text"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wrong_log_records"
                android:background="@color/color_back_title"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/color_text"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/test_fail_records"
                android:background="@color/color_wyze_scale_bg"
                android:text="@string/connect_phone_fail_records"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/color_text"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>